# mock

./: .carthorse.yml  .coveragerc  .gitignore  .hgignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  NEWS  README.rst  README.txt  __version__.py  backport.py  discover.py  extendmock.py  lastsync.txt  mock.py  mock.txt  mock.wpr  pytest.ini  release.py  requirements.txt  runtests.bat  runtests.sh  setup.cfg  setup.py  testcase.py  testutils.py  tox.ini  unittest.cfg
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
NEWS.d/: 2019-08-28-21-40-12.bpo-37972.kP-n4L.rst  2020-11-05-16-00-03.bpo-41877.FHbngM.rst
UnitTests/: __init__.py  alltests.py  mocktest.py  patchtest.py  sentineltest.py
docs/: changelog.txt  compare.txt  conf.py  examples.txt  getting-started.txt  helpers.txt  index.txt  magicmock.txt  mock.txt  mocksignature.txt  patch.txt  sentinel.txt  todo.txt
docs/_templates/: layout.html
mock/: __init__.py  backports.py  mock.py
mock/tests/: conftest.py  support.py  testasync.py  testcallable.py  testhelpers.py  testhelpers_py3.py  testmagicmethods.py  testmock.py  testpatch.py  testsealable.py  testsentinel.py  testsupport.py  testthreadingmock.py  testwith.py
tests/: __init__.py  _testwith.py  alltests.py  mocktest.py  patchtest.py  sentineltest.py  support.py  support_with.py  testcallable.py  testextendmock.py  testhelpers.py  testmagicmethods.py  testmock.py  testmocksignature.py  testpatch.py  testsentinel.py  testwith.py  withtest.py
tools/: pre-applypatch
