[metadata]
name = mock
summary = Rolling backport of unittest.mock for all Pythons
home-page = http://mock.readthedocs.org/en/latest/
description-file = README.rst
author = Testing Cabal
author-email = testing-in-python@lists.idyll.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
keyword =
    testing, test, mock, mocking, unittest, patching, stubs, fakes, doubles

[options]
python_requires=>=3.6
packages = mock

[options.extras_require]
docs =
  sphinx
test =
  pytest
  pytest-cov
build =
  twine
  wheel
  blurb

[tool:pytest]
python_files=test*.py
filterwarnings =
    error::RuntimeWarning
    ignore::DeprecationWarning
